--- a/css/resources.css
+++ b/css/resources.css
@@ -192,7 +192,6 @@
   /*footer basics*/
   .footer
   {
-    width: 80%;
     height: 25vh;
     background-color: #ccbed4;
     color: black;
@@ -202,6 +201,7 @@
     margin: 0 auto;
     position: sticky;
     bottom: 0;
+    margin-left: 22rem;
   }
 
   /*footer organization*/
