--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -161,7 +161,7 @@
     margin: 6em;
     width: 600px;
     font-size: 1.5em;
-    margin-left: 6em;
+    margin-left: 10em;
   }
   
   .block1-content h2 {
@@ -298,7 +298,7 @@
     margin: 6em;
     width: 600px;
     font-size: 1.5em;
-    margin-left: 6em;
+    margin-left: 10em;
   }
   
   .block3-content h2 {
@@ -320,7 +320,7 @@
     margin: 30px 60px;
     width: 300px;
     height: 400px;
-    margin-left: 5em;
+    margin-left: 25em;
     margin-top: 4em;
     border-radius: 50%;
   }
@@ -331,9 +331,9 @@
     margin: 30px 60px;
     margin-right: 140px;
     width: 500px;
-    height: 350px;
+    height: 400px;
     margin-top: 6em;
-    margin-left: 6em;
+    margin-left: 12em;
     border-radius: 50%;
   }
 
@@ -410,7 +410,7 @@
   /*footer basics*/
   .footer
   {
-    width: 100%;
+    width: 70%;
     height: 25vh;
     background-color: #ccbed4;
     color: black;
@@ -420,6 +420,7 @@
     margin-left: 8rem;
     position: sticky;
     bottom: 0;
+    margin-left: 22rem;
   }
 
   /*footer organization*/
