--- a/css/mediaRe.css
+++ b/css/mediaRe.css
@@ -41,208 +41,283 @@
 
 /*1426 px*/
 @media screen and (max-width:1500px){
-  
   .footer{
     margin:0;
     margin-left: 11rem;
     width: 1500px;
   }
-  
 }
 
 
 /*1280 px*/
 @media screen and (max-width:1285px){
- 
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-left: 30.5rem;
+    margin-top: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 300px;
+  }
 
   .logoFooter{
-      display: none;
-      font-size: 1rem;
-    }
-   
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-   
-   
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-   
-    .footer{
-      margin-left: 0;
-      margin-left: 2rem;
-    }
-   
-    .button1{
-      margin-right: 2em;
-    }
+    display: none;
+    font-size: 1rem;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+ 
+  .footer{
+    font-size: small;
+    display: table;
+    width: 300px;
+  }
+ 
+  .button1{
+    margin-right: 2em;
+  }
 }
 
 /*1120 px*/
 @media screen and (max-width:1190px){
-  
-  
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-left: 22.5rem;
+    margin-top: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 250px;
+  }
+
   .logoFooter{
-      display: none;
-      font-size: 1rem;
-    }
-   
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-   
-   
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-   
-    .footer{
-      margin-left: 0;
-      margin-left: 2rem;
-    }
-   
-    .button1{
-      margin-right: 2em;
-    }
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+    width: 300px;
+  }
 }
 
 
 /*1024 px*/
 @media screen and (max-width:1025px){
-  
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-left: 22.5rem;
+    margin-top: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 250px;
+  }
 
   .logoFooter{
-      display: none;
-      font-size: 1rem;
-    }
-   
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-   
-   
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-   
-    .footer{
-      margin-left: 0;
-      margin-left: 2rem;
-    }
-   
-    .button1{
-      margin-right: 2em;
-    }
+    display: none;
+    font-size: 1rem;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+ 
+  .footer{
+    font-size: small;
+    display: table;
+    width: 300px;
+  }
+ 
+  .button1{
+    margin-right: 2em;
+  }
 }
 
 /*912 px or surface pro*/
 @media screen and (max-width:913px){
-  
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-left: 19rem;
+    margin-top: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 200px;
+  }
 
   .logoFooter{
-      display: none;
-      font-size: 1rem;
-    }
-   
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-   
-   
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-   
-    .footer{
-      margin-left: 0;
-      margin-left: 2rem;
-    }
-   
-    .button1{
-      margin-right: 2em;
-    }
+    display: none;
+    font-size: 1rem;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+ 
+  .footer{
+    font-size: small;
+    display: table;
+    width: 300px;
+  }
+ 
+  .button1{
+    margin-right: 2em;
+  }
 }
 
 /*820 px or ipad air*/
 @media screen and (max-width:821px){
-  
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-left: 16rem;
+    margin-top: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 200px;
+  }
 
   .logoFooter{
-      display: none;
-      font-size: 1rem;
-    }
-   
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-   
-   
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-   
-    .footer{
-      margin-left: 0;
-      margin-left: 2rem;
-    }
-   
-    .button1{
-      margin-right: 2em;
-    }
+    display: none;
+    font-size: 1rem;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+ 
+  .footer{
+    font-size: small;
+    display: table;
+    width: 300px;
+  }
+ 
+  .button1{
+    margin-right: 2em;
+  }
 
 }
 
  /*768 px or ipad mini*/
  @media screen and (max-width:769px){
-  
-  .logoFooter{
-      display: none;
-      font-size: 1rem;
-    }
-   
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-   
-   
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-   
-    .footer{
-      margin-left: 0;
-      margin-left: 2rem;
-    }
-   
-    .button1{
-      margin-right: 2em;
-    }
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-left: 14.5rem;
+    margin-top: 2rem;
+  }
 
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 200px;
+  }
+
+  .logoFooter{
+    display: none;
+    font-size: 1rem;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+ 
+  .footer{
+    font-size: small;
+    display: table;
+    width: 300px;
+  }
+ 
+  .button1{
+    margin-right: 2em;
+  }
 }
 
 /*690 px*/
 @media screen and (max-width:690px){
-  
-
   .logoFooter{
       display: none;
       font-size: 1rem;
@@ -261,8 +336,8 @@
     }
    
     .footer{
-      margin-left: 0;
-      margin-left: 2rem;
+      font-size: small;
+      display: table;
     }
    
     .button1{
@@ -274,154 +349,284 @@
 
 /*540px and below*/
 @media screen and (max-width:541px){
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 300px;
+    margin-left: 7.5rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 11rem;
+  }
+
   .logoFooter{
-      display: none;
-      font-size: 1rem;
-    }
-   
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-   
-   
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-   
-    .footer{
-      margin-left: 0;
-      margin-left: 2rem;
-    }
-   
-    .button1{
-      margin-right: 2em;
-    }
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
 }
 
 /*462px*/
 @media screen and (max-width:463px){
-  .footer{
-    margin-left: 0;
-    margin-left: 2rem;
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 300px;
+    margin-left: 4.25rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 7rem;
   }
 
   .logoFooter{
-      display: none;
-    }
-   
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-   
-   
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
+    display: none;
+  }
  
-    .button1{
-     margin-right: 2em;
-    }
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+    width: 300px;
+  }
    
 }
 
 /*415px and below*/
 @media screen and (max-width:415px){
-  .footer{
-    margin-left: 0;
-    margin-left: 2rem;
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 300px;
+    margin-left: 3.5rem;
   }
-  
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 7rem;
+  }
+
   .logoFooter{
-      display: none;
-    }
-   
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-   
-   
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
+    display: none;
+  }
  
-    .button1{
-     margin-right: 2em;
-    }
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+    width: 300px;
+  }
+   
+
+}
+/*376 px*/
+@media screen and (max-width:391px){
+
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 300px;
+    margin-left: 3rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 6rem;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+    width: 300px;
+  }
    
 
 }
 
 /*376 px*/
-@media screen and (max-width:376px){
-  .footer{
-    margin-left: 0;
-    margin-left: 2rem;
+@media screen and (max-width:375px){
+
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 300px;
+    margin-left: 2.5rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 6rem;
   }
 
   .logoFooter{
-      display: none;
-    }
-   
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-   
-   
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
+    display: none;
+  }
  
-    .button1{
-     margin-right: 2em;
-    }
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+    width: 300px;
+  }
+   
+
+}
+
+
+
+/*376 px*/
+@media screen and (max-width:361px){
+
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 300px;
+    margin-left: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 6rem;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+    width: 250px;
+  }
    
 
 }
 
 /*280 px or galaxy fold*/
 @media screen and (max-width:281px){
-  .footer{
-    margin-left: 0;
-    margin-left: 2rem;
+  .contact-us-box{
+    margin: 0;
+    width: 200px;
+    height: 300px;
+    margin-left: 2.5rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 3rem;
+    width: 200px;
+  }
+
+  .email{
+    display: inline;
   }
 
   .logoFooter{
-      display: none;
-    }
-   
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-   
-   
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-   
-    .intro-text{
-      font-size: 1em;
-    }
-   
-    .intro {
-        height: 300px;
-    }
-   
-    .button1{
-      margin-right: 2em;
-    }
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+    width: 200px;
+  }
+
 }
