--- a/css/contact.css
+++ b/css/contact.css
@@ -133,10 +133,16 @@
         width: 25%;
         height: 200px;
         background-color: #ccbed4;
-        margin: 7em auto; /* Center horizontally */
+        float: right;
+        display: table-column;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 7em;
         margin-bottom: 7em;
         padding: 20px;
         border-radius: 5px;
+        margin-right: 15em;
     }
     
     
@@ -148,14 +154,13 @@
         margin: 10px 0; 
     }
     
-    /*
     .contact-form-container {
         margin-top: 40px;
         width: 50%;
-        margin: 5em;
+        margin: 7em;
         margin-left: 3em;
         margin-right: 3em;
-        margin-bottom: 6m;
+        margin-bottom: 7em;
         color: white;
     }
     
@@ -213,17 +218,6 @@
     .email{
         font-size: medium;
     }
-    */
-    
-
-
-
-
-
-
-
-
-
 
 
 
