--- a/css/media.css
+++ b/css/media.css
@@ -40,6 +40,80 @@
 }
 
 /*1426 px*/
+@media screen and (max-width:2000px){
+  .imageright
+  {
+    margin-top: 9em;
+    margin-right: 8rem;
+    margin-left: 20rem;
+    width: 300px;
+    height: 400px;
+  }
+ 
+  .imageleft
+  {
+    margin-top: 0;
+    margin-left: 20em;
+    width: 350px;
+    height: 225px;
+  }
+ 
+  .block1-content {
+   margin: 0%;
+   width: 500px;
+   margin-top: 5em;
+   margin-left: 2em;
+   display: inline-block;
+   margin-left: 16em;
+ }
+ 
+ 
+ .block1-content p
+ {
+   font-size: medium;
+   word-spacing: 2px;
+   width: 500px;
+   margin-left: 20px 0px;
+ }
+ 
+ .block2
+   {
+     margin-top: 0%;
+   }
+ 
+ .block3-content
+   {
+     margin: 0%;
+     width: 500px;
+     height: 300px;
+     font-size: 1.5em;
+     display: inline-block;
+     margin-left: 22rem;
+   }
+ 
+   .block3-content p
+   {
+     font-size: medium;
+     word-spacing: 2px;
+     width: 500px;
+     margin-left: 2em;
+   }
+
+   .block3-content h2{
+    margin-left: 1em;
+   }
+
+  .button2{
+    margin-left: 1.5em;
+  }
+
+  .footer{
+    margin:0;
+    margin-left: 22rem;
+  }
+}
+
+/*1426 px*/
 @media screen and (max-width:1500px){
   .imageright
   {
