--- a/css/mediaCI.css
+++ b/css/mediaCI.css
@@ -55,7 +55,7 @@
     margin: 0;
     width: 300px;
     height: 250px;
-    margin-left: 30.5rem;
+    margin-right: 5rem;
     margin-top: 2rem;
   }
 
@@ -64,6 +64,7 @@
     margin-top: 2rem;
     margin-left: 7rem;
     width: 300px;
+    margin-bottom: 10rem;
   }
 
   .logoFooter{
@@ -100,7 +101,7 @@
     margin: 0;
     width: 300px;
     height: 250px;
-    margin-left: 22.5rem;
+    margin-right: 22.5rem;
     margin-top: 2rem;
   }
 
@@ -109,6 +110,7 @@
     margin-top: 2rem;
     margin-left: 7rem;
     width: 250px;
+    margin-bottom: 10rem;
   }
 
   .logoFooter{
@@ -141,7 +143,7 @@
     margin: 0;
     width: 300px;
     height: 250px;
-    margin-left: 22.5rem;
+    margin-right: 5rem;
     margin-top: 2rem;
   }
 
@@ -150,6 +152,7 @@
     margin-top: 2rem;
     margin-left: 7rem;
     width: 250px;
+    margin-bottom: 10rem;
   }
 
   .logoFooter{
@@ -186,7 +189,7 @@
     margin: 0;
     width: 300px;
     height: 250px;
-    margin-left: 19rem;
+    margin-right: 5rem;
     margin-top: 2rem;
   }
 
@@ -195,6 +198,7 @@
     margin-top: 2rem;
     margin-left: 7rem;
     width: 200px;
+    margin-bottom: 10rem;
   }
 
   .logoFooter{
@@ -231,7 +235,7 @@
     margin: 0;
     width: 300px;
     height: 250px;
-    margin-left: 16rem;
+    margin-right: 5rem;
     margin-top: 2rem;
   }
 
@@ -240,6 +244,7 @@
     margin-top: 2rem;
     margin-left: 7rem;
     width: 200px;
+    margin-bottom: 10rem;
   }
 
   .logoFooter{
@@ -277,7 +282,8 @@
     margin: 0;
     width: 300px;
     height: 250px;
-    margin-left: 14.5rem;
+    margin-left : 10rem;
+    margin-right: 4rem;
     margin-top: 2rem;
   }
 
@@ -286,6 +292,7 @@
     margin-top: 2rem;
     margin-left: 7rem;
     width: 200px;
+    margin-bottom: 10rem;
   }
 
   .logoFooter{
@@ -353,7 +360,7 @@
     margin: 0;
     width: 300px;
     height: 300px;
-    margin-left: 7.5rem;
+    margin-right: 7.5rem;
   }
 
   .contact-form-container{
@@ -390,7 +397,7 @@
     margin: 0;
     width: 300px;
     height: 300px;
-    margin-left: 4.25rem;
+    margin-right: 4.25rem;
   }
 
   .contact-form-container{
@@ -429,7 +436,7 @@
     margin: 0;
     width: 300px;
     height: 300px;
-    margin-left: 3.5rem;
+    margin-right: 3.5rem;
   }
 
   .contact-form-container{
@@ -469,7 +476,7 @@
     margin: 0;
     width: 300px;
     height: 300px;
-    margin-left: 3rem;
+    margin-right: 3rem;
   }
 
   .contact-form-container{
@@ -510,7 +517,7 @@
     margin: 0;
     width: 300px;
     height: 300px;
-    margin-left: 2.5rem;
+    margin-right: 2.5rem;
   }
 
   .contact-form-container{
@@ -553,7 +560,7 @@
     margin: 0;
     width: 300px;
     height: 300px;
-    margin-left: 2rem;
+    margin-right: 2rem;
   }
 
   .contact-form-container{
@@ -593,7 +600,7 @@
     margin: 0;
     width: 200px;
     height: 300px;
-    margin-left: 2.5rem;
+    margin-right: 2.5rem;
   }
 
   .contact-form-container{
